[gd_scene load_steps=4 format=3 uid="uid://d2eq5pdqrs2dc"]

[ext_resource type="Script" path="res://scene_1.gd" id="1_mm6te"]
[ext_resource type="Script" path="res://farbe_rect.gd" id="2_cjnlp"]
[ext_resource type="Script" path="res://panel.gd" id="2_qpehg"]

[node name="scene1" type="Node2D"]
script = ExtResource("1_mm6te")
metadata/_edit_vertical_guides_ = [400.0]

[node name="FarbeRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(400, 600)
offset_right = 400.0
offset_bottom = 600.0
color = Color(0.552468, 0.483989, 0.208046, 1)
script = ExtResource("2_cjnlp")

[node name="SubBereich" type="SubViewportContainer" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 390.0
offset_bottom = 590.0
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SubBereich"]
handle_input_locally = false
size = Vector2i(380, 580)
render_target_update_mode = 4

[node name="Button" type="Button" parent="SubBereich/SubViewport"]
offset_left = 288.0
offset_top = 32.0
offset_right = 360.0
offset_bottom = 63.0
text = "1. Scene"

[node name="Panel" type="Panel" parent="SubBereich/SubViewport"]
offset_left = 64.0
offset_top = 64.0
offset_right = 104.0
offset_bottom = 104.0
script = ExtResource("2_qpehg")
